Show real data on demographics cursor tooltip

--- a/frontend/app/templates/components/projections-map.hbs
+++ b/frontend/app/templates/components/projections-map.hbs
@@ -2,5 +2,5 @@
 	<div id="tiles"></div>
 </div>
 
-{{tooltip-votes sectionsData=sectionsData hoveredSection=hoveredSection isPopulation=isPopulation visualization=visualization}}
+{{tooltip-votes sectionsData=model hoveredSection=hoveredSection isPopulation=isPopulation visualization=visualization}}
 
