--- a/frontend/app/templates/components/tooltip-population.hbs
+++ b/frontend/app/templates/components/tooltip-population.hbs
@@ -1,26 +1,26 @@
 <div class="tooltip-row">
-	<h6 class="tooltip-header">Sección: {{hoveredSection.section_code}} <span class="small-text">{{hoveredSection.population}} Pob. total</span></h6>
+	<h6 class="tooltip-header">Sección: {{hoveredSection.section_code}} <span class="small-text">{{demographics.total}} Pob. total</span></h6>
 </div>
 <div class="tooltip-row">
 	<table class="table votes-table">
 		<thead class="votes-table-header">
 			<tr>
 				<th>Pob.</th>
-				<th> &lt; 30</th>
-				<th> > 30</th>
-				<th> Fem.</th>
-				<th> Masc.</th>
+				<th>Hogares</th>
+				<th>Hijos</th>
+				<th>Hombre</th>
+				<th>Mujer</th>
 			</tr>
 		</thead>
 		<tbody class="votes-table-content">
 			<tr>
 				<td>
-					<span class="tooltip-party">{{hoveredSection.population}}</span>
+					<span class="tooltip-party">{{demographics.total}}</span>
 				</td>
-				<td class="tooltip-pct">{{less30}}%</td>
-				<td class="tooltip-pct">{{more30}}%</td>
-				<td class="tooltip-pct">{{fem}}%</td>
-				<td class="tooltip-pct">{{masc}}%</td>
+				<td class="tooltip-pct">{{demographics.hogares}}</td>
+				<td class="tooltip-pct">{{demographics.hijos}}</td>
+				<td class="tooltip-pct">{{demographics.hombres}}%</td>
+				<td class="tooltip-pct">{{demographics.mujeres}}%</td>
 			</tr>
 		</tbody>
 	</table>
