Improve demographics map tooltip

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -2,11 +2,11 @@
 @import 'layout/sidebar';
 @import 'general/helpers';
 @import 'general/test';
+@import 'general/tooltips';
 @import 'app/projections';
 @import 'app/parties-selection';
 @import 'general/polls';
 @import 'general/login';
-
 @import "ember-power-select";
 @import 'general/searchbar';
 @import 'general/admin';
