--- a/frontend/app/styles/general/_dashboard.sass
+++ b/frontend/app/styles/general/_dashboard.sass
@@ -1,17 +1,28 @@
 .dashboard
     display: flex
     flex-wrap: wrap
+    align-items: baseline
 
+.dashboard-controls
+    display: grid;
+    grid-column-gap: 10px;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 5px 10px;
+    
 .chart-panel
     padding: 10px
     border: 1px solid #efefef;
     margin: 15px
     margin-right: 0
     .chart-title
-        margin-bottom: 0
+        margin-bottom: 10px
         font-size: 23px
     .chart-subtitle
-        margin-top: -7px
+        margin-top: -17px
         margin-left: 10px
         font-size: 15px
         color: #777
+    .tab-content
+        padding-top: 10px
+    .active
+        background-color: transparent !important;
