--- a/frontend/app/styles/general/_voters.sass
+++ b/frontend/app/styles/general/_voters.sass
@@ -88,8 +88,16 @@
 	div
 		border-radius: 5px
 		padding: 5px
-		background: $gray
-
+		background: $white
+		border: 1px solid $lightgray
+		box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	h2
+		text-align: center
+		font-weight: bold
+		margin-top: 5px
+		font-size: 14px
+	.address
+		margin-left: 20px
 // Fields
 .voter-edit-field
 	font-size: 14px !important
