Cambios al layout del dashboard de capturistas

--- a/frontend/app/templates/components/capturist-dashboard.hbs
+++ b/frontend/app/templates/components/capturist-dashboard.hbs
@@ -1,48 +1,69 @@
 <div class="dashboard-controls">
-    <div>
-        <p>Estado:</p>
-        {{#power-select
-        options=states
-        placeholder="Selecciona un estado para filtrar"
-        onchange=(action "stateSelect")
-        selected=selectedState
-        allowClear=true
-        as |state|}}
-            {{state.name}}
-        {{/power-select}}
-    </div>
-    {{#if selectedState}}
+    {{#if loadingStates}}
+        <i class="fa fa-spinner fa-pulse fa-3x fa-fw" 
+            style="justify-self: center;align-self: center;" />
+    {{else}}
         <div>
-            <p>Municipio:</p>
+            <p>Estado:</p>
             {{#power-select
-            options=municipalities
-            placeholder="Selecciona un municipio para filtrar"
-            onchange=(action "municipalitySelect")
-            selected=selectedMunicipality
+            options=states
+            placeholder="Selecciona un estado para filtrar"
+            onchange=(action "stateSelect")
+            selected=selectedState
             allowClear=true
-            as |mun|}}
-                {{mun}}
+            noMatchesMessage="No hay datos"
+            loadingMessage="Cargando..."
+            as |state|}}
+                {{state.name}}
             {{/power-select}}
         </div>
     {{/if}}
+    {{#if selectedState}}
+        {{#if loadingMunis}}
+            <i class="fa fa-spinner fa-pulse fa-3x fa-fw" 
+                style="justify-self: center;align-self: center;" />
+        {{else}}
+            <div>
+                <p>Municipio:</p>
+                {{#power-select
+                options=municipalities
+                placeholder="Selecciona un municipio para filtrar"
+                onchange=(action "municipalitySelect")
+                selected=selectedMunicipality
+                allowClear=true
+                noMatchesMessage="No hay datos"
+                loadingMessage="Cargando..."
+                as |mun|}}
+                    {{mun}}
+                {{/power-select}}
+            </div>
+        {{/if}}
+    {{/if}}
     {{#if selectedMunicipality}}
-        <div>
-            <p>Sección:</p>
-            {{#power-select
-            options=sections
-            placeholder="Selecciona una sección para filtrar"
-            onchange=(action "sectionSelect")
-            selected=selectedSection
-            allowClear=true
-            as |section|}}
-                {{section}}
-            {{/power-select}}
-        </div>
+        {{#if loadingSections}}
+            <i class="fa fa-spinner fa-pulse fa-3x fa-fw" 
+                style="justify-self: center;align-self: center;" />
+        {{else}}
+            <div>
+                <p>Sección:</p>
+                {{#power-select
+                options=sections
+                placeholder="Selecciona una sección para filtrar"
+                onchange=(action "sectionSelect")
+                selected=selectedSection
+                allowClear=true
+                noMatchesMessage="No hay datos"
+                loadingMessage="Cargando..."
+                as |section|}}
+                    {{section}}
+                {{/power-select}}
+            </div>
+        {{/if}}
     {{/if}}
 </div>
 <div class='dashboard'>
-    <div class="chart-panel">
-        Número de registros: {{async-data query=totalQuery}}
+    <div class="chart-panel" id='stats'>
+        <p>Número de registros:</p>{{async-data query=totalQuery}}
     </div>
     <div class="chart-panel">
         <p class="chart-title">Genero</p>
@@ -95,17 +116,17 @@
     </div>
 
     <div class="chart-panel">
-        <p class="chart-title">Tiene E-mail?</p>
+        <p class="chart-title">¿Tiene E-mail?</p>
         {{async-chart query=emailQuery type="column"}}
     </div>
 
     <div class="chart-panel">
-        <p class="chart-title">Tiene Telefono?</p>
+        <p class="chart-title">¿Tiene Telefono?</p>
         {{async-chart query=phoneQuery type="column"}}
     </div>
 
     <div class="chart-panel">
-        <p class="chart-title">Tiene Facebook?</p>
+        <p class="chart-title">¿Tiene Facebook?</p>
         {{async-chart query=facebookQuery type="column"}}
     </div>
 
