--- a/frontend/app/styles/general/_dashboard.sass
+++ b/frontend/app/styles/general/_dashboard.sass
@@ -2,6 +2,12 @@
     display: flex
     flex-wrap: wrap
     align-items: baseline
+    #stats
+        display: grid
+        grid-template-columns: 3fr 1fr
+        &>:nth-child(even)
+            padding-right: 5px;
+            text-align: right
 
 .dashboard-controls
     display: grid;
@@ -26,3 +32,7 @@
         padding-top: 10px
     .active
         background-color: transparent !important;
+
+@media(max-width: 629px)
+    .dashboard-controls
+        grid-template-columns: 1fr
