Add content to demographics map key, missing explanations

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -2,6 +2,7 @@
 @import 'layout/sidebar';
 @import 'general/helpers';
 @import 'general/test';
+@import 'general/map-keys';
 @import 'general/tooltips';
 @import 'app/projections';
 @import 'app/parties-selection';
