Changes to voter data API

--- a/frontend/app/templates/components/capturist-dashboard.hbs
+++ b/frontend/app/templates/components/capturist-dashboard.hbs
@@ -34,7 +34,7 @@
                 noMatchesMessage="No hay datos"
                 loadingMessage="Cargando..."
                 as |mun|}}
-                    {{mun}}
+                    {{mun.name}}
                 {{/power-select}}
             </div>
         {{/if}}
