--- a/frontend/app/templates/components/async-chart.hbs
+++ b/frontend/app/templates/components/async-chart.hbs
@@ -1,7 +1,7 @@
 {{#if runQuery.isIdle}}
     {{#if success}}
         {{#if data}}
-            <div id="{{id}}" style="min-height:150px;min-width:300px"></div>
+            <div id="{{id}}" style="flex: 1"></div>
         {{else}}
             <p>No hay información</p>
         {{/if}}
