--- a/frontend/app/styles/general/_dashboard.sass
+++ b/frontend/app/styles/general/_dashboard.sass
@@ -10,16 +10,20 @@
             text-align: right
 
 .dashboard-controls
-    display: grid;
-    grid-column-gap: 10px;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin: 5px 10px;
+    display: grid
+    grid-column-gap: 10px
+    grid-row-gap: 5px
+    grid-template-columns: 1fr 1fr 1fr
+    margin: 5px 10px
+    .ember-power-select-trigger
+        border: 1px solid #e5e5e5
     
 .chart-panel
     padding: 10px
-    border: 1px solid #efefef;
+    border: 1px solid #e5e5e5;
     margin: 15px
     margin-right: 0
+    border-radius: 2px
     .chart-title
         margin-bottom: 10px
         font-size: 23px
@@ -32,6 +36,15 @@
         padding-top: 10px
     .active
         background-color: transparent !important;
+
+.chart
+    min-height: 200px
+    min-width: 350px
+    display: flex
+    flex-direction: column
+
+.tall-chart
+    min-height: 300px
 
 @media(max-width: 629px)
     .dashboard-controls
