Fixes ordering inside modules and makes the search boxes more usefull

--- a/frontend/app/templates/components/supervisor-dashboard.hbs
+++ b/frontend/app/templates/components/supervisor-dashboard.hbs
@@ -1,6 +1,6 @@
 <div class="dashboard-controls manager-dashboard">
     {{#if loadingCapturists}}
-        <i class="fa fa-spinner fa-pulse fa-3x fa-fw" 
+        <i class="fa fa-spinner fa-pulse fa-3x fa-fw"
             style="justify-self: center;align-self: center;" />
     {{else}}
         <div>
@@ -11,6 +11,7 @@
             onchange=(action "capturistSelect")
             selected=selectedCapturist
             allowClear=true
+            searchField="name"
             noMatchesMessage="No hay datos"
             loadingMessage="Cargando..."
             as |capt|}}
@@ -21,7 +22,7 @@
     <div></div>
     <div></div>
     {{#if loadingGeoData}}
-        <i class="fa fa-spinner fa-pulse fa-3x fa-fw" 
+        <i class="fa fa-spinner fa-pulse fa-3x fa-fw"
             style="justify-self: center;align-self: center;" />
     {{else}}
         <div>
@@ -32,6 +33,7 @@
             onchange=(action "stateSelect")
             selected=selectedState
             allowClear=true
+            searchField="name"
             noMatchesMessage="No hay datos"
             loadingMessage="Cargando..."
             as |state|}}
@@ -48,6 +50,7 @@
             onchange=(action "municipalitySelect")
             selected=selectedMunicipality
             allowClear=true
+            searchField="name"
             noMatchesMessage="No hay datos"
             loadingMessage="Cargando..."
             as |mun|}}
@@ -115,7 +118,7 @@
 
     <div class="chart-panel">
         <p class="chart-title">Fecha de Captura</p>
-        
+
         <ul class="nav nav-tabs" role="tablist">
             <li role="presentation" class="active"><a href="#por-mes" aria-controls="por-mes" role="tab" data-toggle="tab">Por Mes</a></li>
             <li role="presentation"><a href="#por-semana" aria-controls="por-semana" role="tab" data-toggle="tab">Por Semana</a></li>
